--- a/setup/abstract.tex
+++ b/setup/abstract.tex
@@ -22,6 +22,8 @@
 近期逐步将一些部分的内容剥离了这个文档, 将论文阅读笔记、想法分别放在了新的文档中. 修改记录于\textbf{2020-10-14}凌晨. 顺便感叹一下, 想点子好难！
 
 这一两周（现在是\textbf{2022-04-13}）开始找实习了, 人生如此多艰！我就是一个没有感情的面经生成器$\sim\sim\sim$
+
+实习快要结束了，不容歇息，秋招已经开始了（现在是\textbf{2022-08-10}）。提前批已经不知不觉地过去，残酷而激烈的秋招已经拉开序幕，祝我好运$\sim\sim\sim$
 % \begin{center}
 % \huge{{\color{red}路漫漫其修远兮,  吾将上下而求索~~~} }
 % \end{center}
