--- a/body/ML/classic.tex
+++ b/body/ML/classic.tex
@@ -435,7 +435,7 @@ $$
 	$$
 	L(w, b, \alpha) = -\frac{1}{2} \sum_{i=1}^N \sum_{j=1}^{N} \alpha_i \alpha_j y_i y_j (x_i \cdot x_j) + \sum_{i=1}^N \alpha_i
 	$$	
-	则对偶问题成了 (转换成了$min$) : 
+	则对偶问题成了 (加了个负号, 转换成了$min$) : 
 	\begin{align}
 		\mathop{min}_{\alpha}\quad &\frac{1}{2} \sum_{i=1}^N \sum_{j=1}^{N} \alpha_i \alpha_j y_i y_j (x_i \cdot x_j) - \sum_{i=1}^N \alpha_i \nonumber \\
 		s.t.\quad &\sum_{i=1}^N \alpha_i y_i = 0 \nonumber \\
@@ -445,7 +445,7 @@ $$
 	$$
 	w^* = \sum_{i=1}^N \alpha_i^* y_i x_i
 	$$
-	那么$b$呢？回忆KKT条件\ref{kkt}, 有$\alpha_i^* (1 - y_i(w^* x_i + b^*)) = 0$, 因为$\alpha \neq 0$, 故肯定存在$\alpha_j^* \neq 0$, 则: 
+	那么$b$呢？回忆KKT条件\ref{kkt}, 有$\alpha_i^* (1 - y_i(w^* x_i + b^*)) = 0$, 因为$\alpha \neq 0$, 故肯定存在某个分量 $\alpha_j^* \neq 0$, 则: 
 	\begin{align}
 		&1 - y_j(w^* x_j + b^*) = 0 \nonumber \\
 		&\mathop{\Longrightarrow}_{\times y_j} y_j - y_j^2 (w^* x_j + b^*) = 0 \nonumber \\
