--- a/body/ML/classic.tex
+++ b/body/ML/classic.tex
@@ -240,6 +240,8 @@ Decision Tree, 是一种基本的分类与回归方法, 基于树形结构来进
 
 \subsection{GBDT}
 
+\subsection{GMM}
+Gaussian Mixture Model, 高斯混合模型. 
 
 \subsection{Kmeans}
 一种基于划分的聚类算法. Kmeans 通过最小化样本到质心的距离来对样本点进行划分. Kmeans 的流程:
