--- a/main.tex
+++ b/main.tex
@@ -250,6 +250,20 @@
 
 
 \clearpage
+\part{BigData}
+{\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
+
+\section{HDFS}
+\input{body/bigdata/hdfs}
+
+\section{MapReduce}
+\input{body/bigdata/mapreduce}
+
+\section{Spark}
+\input{body/bigdata/spark}
+
+
+\clearpage
 \part{Others}
 {\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
 \section{Others}
