--- a/body/recsys/classic.tex
+++ b/body/recsys/classic.tex
@@ -79,3 +79,5 @@ Field-aware Factorization Machine,
 
 \subsection{EGES}
 来自阿里 18 年在 KDD 上发表的论文 \href{https://arxiv.org/pdf/1803.02349.pdf}{Billion-scale Commodity Embedding for E-commerce	Recommendation in Alibaba}.
+
+\subsection{Swing}
