--- a/references.bib
+++ b/references.bib
@@ -333,3 +333,43 @@ url={https://openreview.net/forum?id=ryGs6iA5Km},
 	biburl    = {https://dblp.org/rec/conf/nips/KeMFWCMYL17.bib},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{rendle_fm_2010_icdm,
+	author = {Rendle, Steffen},
+	title = {Factorization Machines},
+	year = {2010},
+	isbn = {9780769542560},
+	publisher = {IEEE Computer Society},
+	address = {USA},
+	url = {https://doi.org/10.1109/ICDM.2010.127},
+	doi = {10.1109/ICDM.2010.127},
+	booktitle = {Proceedings of the 2010 IEEE International Conference on Data Mining},
+	pages = {995–1000},
+	numpages = {6},
+	keywords = {tensor factorization, sparse data, factorization machine, support vector machine},
+	series = {ICDM '10}
+}
+
+@inproceedings{juan_ffm_2016_recsys,
+	author = {Juan, Yuchin and Zhuang, Yong and Chin, Wei-Sheng and Lin, Chih-Jen},
+	title = {Field-Aware Factorization Machines for CTR Prediction},
+	year = {2016},
+	isbn = {9781450340359},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/2959100.2959134},
+	doi = {10.1145/2959100.2959134},
+	booktitle = {Proceedings of the 10th ACM Conference on Recommender Systems},
+	pages = {43–50},
+	numpages = {8},
+	keywords = {computational advertising, machine learning, click-through rate prediction, factorization machines},
+	location = {Boston, Massachusetts, USA},
+	series = {RecSys '16}
+}
+
+@inproceedings{hb_ftrl_2010_colt,
+	title={Adaptive Bound Optimization for Online Convex Optimization},
+	author={H. B. McMahan and Matthew J. Streeter},
+	booktitle={COLT},
+	year={2010}
+}
