--- a/body/recsys/basic.tex
+++ b/body/recsys/basic.tex
@@ -156,7 +156,16 @@ $$
 
 \subsection{电商推荐}
 
-\subsection{用户冷启动的解决办法}
+\subsection{冷启动}
+冷启动一般是指缺少有价值的数据, 不利于做个性化的推荐. 主要两种情况: 用户冷启动, 物品冷启动. 
+
+\subsubsection{用户冷启动}
+
+即新来的用户或者交互信息很少的用户. 
+
+\subsubsection{物品冷启动}
+
+即新增的物品或者长尾物品. 
 
 \subsection{负采样}
 真实场景下, 数据集并不是现成的, 通常是需要我们自己去挖掘, 去构造数据集的. 在构造数据集之前, 通常需要对真实问题建模, 建模之后我们才知道自己需要什么样的数据集. 在推荐系统中, 拿到的原始数据通常是用户的行为数据, 比如用户观看的视频, 点击序列. 或者只有用户的正反馈 (负反馈), 如点赞 (点踩), 分享, 收藏等, 这时候我们只能知道用户喜欢 (不喜欢) 什么. 即我们通常只能拿到正样本或者负样本. 一般而言, 缺乏的是负样本. 其实得到负样本并不难, 根据长尾定律, 用户只会喜欢一小撮东西, 其他的东西大多是负样本, 那负样本的构造还是个问题吗? 负采样的难点其实在于如何找到那些\textcolor{red}{\textbf{难负样本}}. 什么叫难负样本? \textit{看起来像是用户会喜欢的东西, 但实际上用户并不喜欢}. 为什么要难负样本呢? 当然是为了让模型学习到更鲁棒的区分能力, 类似于二分类中找到一个更准确的分界面.
