--- a/body/ML/basic.tex
+++ b/body/ML/basic.tex
@@ -71,11 +71,11 @@ $p(x | y) = p(y)p(x | y)$表示的是, 从$p(y)$中采样一个$y$, 然后根据
 
 \textbf{熵}: 先介绍自信息的概念. 对于某个随机变量$X$, 当$X$取值为$x_0$时的自信息为$I(x_0) = -log\ p(x_0)$, 即事件$x_0$发生时所带来的信息量, 如果一个事件发生的概率越大, 则其带来的信息量越小. 熵是自信息的均值. 即$X$取任一值时所能带来的期望信息量, 故$X$的信息熵$H(X) = -E_{x\sim p}I(x)$ (其中p是$X$所服从的分布) , 即$H(X) = -\sum_{x \in X}log\ p(x)$. \textbf{因为随机变量$X$会服从某个分布, 假设是$p$, 则$H(X)$也可以看作是概率分布$p$的信息量的期望. }
 
-\textbf{相对熵}: 也称作KL散度. KL是在信息熵的基础上定义的, 用来衡量两个分布的差异, 其实由上述熵的含义可知, 其实KL也可以看作是随机变量$X$, 其可能服从的两个分布之间的差异. 假设可能服从的两个分布分别是$p, q$, 则以$q$去接近$p$时的KL散度表示为: $D_{KL}(p||q) = \sum_{x \in X} p(x) log\ \frac{p(x)}{q(x)} = E_{x\sim p} log\ \frac{p(x)}{q(x)}$. 经过化简可得$D_{KL} = -H(p) + \sum_{x \in X}p(x)log\ q(x)$. 
+\textbf{相对熵}: 也称作KL散度. KL是在信息熵的基础上定义的, 用来衡量两个分布的差异, 其实由上述熵的含义可知, 其实KL也可以看作是随机变量$X$, 其可能服从的两个分布之间的差异. 假设可能服从的两个分布分别是$p, q$, 则以$q$去接近$p$时的KL散度表示为: $D_{KL}(p||q) = \sum_{x \in X} p(x) log\ \frac{p(x)}{q(x)} = E_{x\sim p} log\ \frac{p(x)}{q(x)}$. 经过化简可得$D_{KL} = -H(p) - \sum_{x \in X}p(x)log\ q(x)$. 
 
 \textbf{交叉熵}: \label{ce}cross-entropy, 与KL散度相似, 也是用来衡量随机变量$X$可能服从的两个分布$p, q$之间的差异的. 其数学上的定义为: $Cross-Entropy(p, q) = -E_{x\sim p} log\ q(x) = - \sum_{x \in X}p(x)log\ q(x)$. 很显然, 交叉熵比KL散度多了一个$H(p)$, 即$Cross-Entropy(p, q) = D_{kL}(p || q) + H(p)$. 
 
-机器学习中常使用交叉熵, 既然KL散度和交叉熵都可以达到相同的目的, 那为什么不使用KL散度呢？在机器学习中, 上述的分布$q$常作为数据的真实分布, 而$q$作为数据的预测分布, 此时$H(P)$则可以视作一个常数 (因为给定数据后, 其真实分布是确定的) , 在优化模型的参数时, $H(P)$并不会对参数的优化做出贡献 (不会影响优化过程) , 故使用交叉熵即可. 
+机器学习中常使用交叉熵, 既然KL散度和交叉熵都可以达到相同的目的, 那为什么不使用KL散度呢？在机器学习中, 上述的分布$p$常作为数据的真实分布, 而$q$作为数据的预测分布, 此时$H(P)$则可以视作一个常数 (因为给定数据后, 其真实分布是确定的), 在优化模型的参数时, $H(P)$并不会对参数的优化做出贡献 (不会影响优化过程) , 故使用交叉熵即可. 
 
 \subsection{关于交叉熵损失函数的一点理解}
 交叉熵损失函数可以从多个角度进行理解. 从概率论的角度, 在极大似然概率估计中, 希望参数能够使得已有样本出现的概率最大. 
