--- a/body/recsys/basic.tex
+++ b/body/recsys/basic.tex
@@ -202,3 +202,64 @@ $$
 	\item 曝光为点击的物品本质上已经是召回认为的正样本了, 如果把这些作为召回的负样本则自相矛盾了(\textcolor{red}{不过能否作为新的找回算法, 训练更准确的召回模型呢?}). 同时, 以曝光为点击作为负样本, 这会使得召回模型只能识别那些高曝光的物品, 而失去对长尾物品的鉴别能力;
 	
 \end{itemize}
+
+\subsection{特征交叉}
+DNN 时代依然将来, 号称拟合一切函数的 DNN 貌似带来了新的问题解决方式 --- 数据, 模型, 学习. DNN 刚开始大行其道时, 其中一个显著的优点就是不用做过多的特征工程, 貌似要抢走工程师们挖掘特征的工作. 不过热潮过后, 特征工程再度进入人们视野, 特别是在某些领域 --- 推荐搜索广告等. 
+
+为什么这几个领域如此重视特征工程呢? 愚见: 这些领域使用的通常是表格类型的, 大多是结构化或者半结构化的数据, 参与预测的实体 (如用户, 商品等) 都含有丰富的属性, 这些信息构建在\textbf{人与物之间的联系, 人的社会行为}之上. 当然, 不可忽略搜推里的数据通常是稀疏且高维的. 总的来说, 其包含的规律信息是我们可预见的. 像 CV,  NLP, Speech 等领域, 虽然大部分的信息也是以人类的行为为基础, 大多也是有迹可循的, 但是其中牵扯到很多的自然界中的信息, 如视觉, 语音这些本来就存在与自然界中的信息, 现在很多的工作可能更多地是去理解这些一直以来存在的信息的载体的本质. 
+
+那么现在的特征交叉的工作有哪些呢?
+
+\subsubsection{人工构造}
+
+特征工程的重要性不言而喻, 早期工程师们根据自己对问题的理解, 人工挖掘特征, 找到对目标变量比较重要的特征组合, 将其与原始特征一齐输入到模型中. 这种方法在现在也还是蛮多见的, 例如 Wide\&Deep, Youtube DNN 中都有人工构造特征的影子. 很显然, 这种方式依赖于对问题深刻的理解, 算是特征交叉里刀耕火种的阶段?
+
+一些缺点: 1) 获得高质量的高阶特征的成本. 不同场景下高质量的特征是不一样的, 需要深厚的领域知识; 2) 特征过多, 难以手工构造; 3) 手工构造的特征泛化不足, 难以覆盖一些抽象的模式.
+
+\subsubsection{GBDT+LR}
+
+树模型对特征进行分裂的特性造就了其特征组合的能力, 来自 Facebook 的 GBDT+LR\cite{he_gbdtlr_2014} 则开启了这一潮流 (至少从公开发表上来看是这样的). 
+
+先看看树模型是怎么做特征组合的. 对于树中的每个结点, 树模型会选择最优的特征及分割点进行分裂, 迭代进行下去生成决策树 --- 相当于对输入空间的一个划分. 从根节点道叶子节点的路径对应着一系列 \mintinline{c}{if-else} 组成的规则 --- 即特征组合. 
+
+基于树模型做特征组合的方式也很简单: 每个样本输入到一棵树中可以得到一个 one-hot 向量, 这个向量既是该样本的一种特征组合方式, 可与原始特征一齐输入到预测模型中. 
+
+特点: 1) 可以在目标变量的指导下自动生成高阶的特征组合; 2) 显然, 生成组合特征需要监督信号; 3) 要调整树模型的参数.
+
+\subsubsection{FM}
+
+FM\cite{steffen_fm_2011} 算是自动做特征交叉的鼻祖? FM 能自动对任意两个特征做交叉:
+
+$$
+\sum_{i=1}^n \sum_{j=i+1}^n <\bm{v}_i, \bm{v}_j> x_i x_j
+$$
+
+FM 会为每个特征学习一个隐向量, 用隐向量的内积作为组合特征的重要性. 其特点: 1) 能够自动做二阶的特征交叉; 2) 隐向量也能一定程度降低数据稀疏性的影响; 3) 一般只支持两阶交叉, 做更高阶的特征交叉时间复杂度大大增加.
+
+除了 FM, 还有一个 FFM\cite{juan_ffm_2016}, 算是 FM 的升级版吧, 在特征上再加了一层 Field (特征域) 的概念, 即每个特征都属于一个 \textit{field}, 如 "科幻片", "喜剧片" 都属于 "电影类型" 这个 field 中. FFM 也主要用来做二阶特征交叉, 也会为每个特征学习隐向量, 但是 FFM 为每个特征在每个域下学习一个隐向量. 如果有 $f$ 个特征域, $n$ 个特征, 那么隐向量的个数为 $n \cdot f$. 其交叉的形式为:
+
+$$
+\sum_{i=1}^n \sum_{j=i+1}^n <\bm{v}_{i, f_j}, \bm{v}_{j, f_i}> x_i x_j
+$$
+
+很显然, 在使用 FFM 时需要按域来对特征进行分组, 对于类别特征, 其取值作为特征都属于同一个域, 对于连续特征则可以单独作为一个域. 
+
+FFM 的特点: 1) 其参数要远大于 FM, 时间复杂度也更高, 不能像 FM 那样进行化简 (关于 FFM 空间/时间的优化可以参考微博的双线性 FFM, Bi-FFM); 2) 引入了特征域的概念, 特征进行两两交叉时, 能够体现域之间的相关性, 当然这也需要更多的参数来学习.
+
+
+相关资料: \href{https://tech.meituan.com/2016/03/03/deep-understanding-of-ffm-principles-and-practices.html}{深入FFM原理与实践}. 
+
+\textcolor{red}{\textbf{其实到这里已经可以看到很多后续工作的影子了 --- 为特征学习 Embedding}}. 
+
+\subsubsection{DCN}
+
+DCN\cite{wang_dcn_2017} 及其升级版 DCN-V2\cite{wang_dcnv2_2021} 由 google 提出来的, 二者都属于泛 Wide\&Deep 类的模型. 
+
+一些缺点: 1) CrossNet 的输出与输入之间存在某种特定形式的关系; 2) CrossNet 的输入是稀疏特征的嵌入, 是 \textit{bit-wise} 方式的特征交叉, 交叉的含义不明显.
+
+\subsubsection{xDeepFM}
+
+初看 xDeepFM\cite{jianxun_xdeepfm_2018} 感觉写的啥玩意儿, 写的那么复杂, 而且估计参数量也要比其他模型高很多. 
+
+\subsubsection{AutoInt}
+AutoInt\cite{song_autoint_2019} 也算一篇看起来很复杂的论文了
