--- a/references.bib
+++ b/references.bib
@@ -373,3 +373,118 @@ url={https://openreview.net/forum?id=ryGs6iA5Km},
 	booktitle={COLT},
 	year={2010}
 }
+
+@article{armand_fasttext_2016,
+	author={Armand Joulin and Edouard Grave and Piotr Bojanowski and Tomas Mikolov},
+	title={Bag of Tricks for Efficient Text Classification.},
+	volume={abs/1607.01759},
+	year=2017,
+}
+
+@article{piotr_fasttext_2017,
+	author={Piotr Bojanowski and Edouard Grave and Armand Joulin and Tomas Mikolov},
+	pages={135-146},
+	title={Enriching Word Vectors with Subword Information.},
+	volume=5,
+	year=2017,
+}
+
+@inproceedings{jianxun_xdeepfm_2018,
+	author={Jianxun Lian and Xiaohuan Zhou and Fuzheng Zhang and Zhongxia Chen and Xing Xie and Guangzhong Sun},
+	booktitle={ACM Knowledge Discovery and Data Mining},
+	pages={1754-1763},
+	title={xDeepFM: Combining Explicit and Implicit Feature Interactions for Recommender Systems.},
+	volume={abs/1803.05170},
+	year=2018,
+}
+
+@article{steffen_fm_2011,
+	author={Steffen Rendle and Zeno Gantner and Christoph Freudenthaler and Lars Schmidt-Thieme},
+	journal={International Conference on Research an Development in Information Retrieval},
+	pages={635-644},
+	title={Fast context-aware recommendations with factorization machines},
+	year=2011,
+}
+
+@inproceedings{wang_dcn_2017,
+	author = {Wang, Ruoxi and Fu, Bin and Fu, Gang and Wang, Mingliang},
+	title = {Deep &amp; Cross Network for Ad Click Predictions},
+	year = {2017},
+	isbn = {9781450351942},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/3124749.3124754},
+	doi = {10.1145/3124749.3124754},
+	booktitle = {Proceedings of the ADKDD'17},
+	articleno = {12},
+	numpages = {7},
+	keywords = {Feature Crossing, Neural Networks, Deep Learning, CTR Prediction},
+	location = {Halifax, NS, Canada},
+	series = {ADKDD'17}
+}
+
+@inproceedings{wang_dcnv2_2021,
+	author = {Wang, Ruoxi and Shivanna, Rakesh and Cheng, Derek and Jain, Sagar and Lin, Dong and Hong, Lichan and Chi, Ed},
+	title = {DCN V2: Improved Deep &amp; Cross Network and Practical Lessons for Web-Scale Learning to Rank Systems},
+	year = {2021},
+	isbn = {9781450383127},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/3442381.3450078},
+	doi = {10.1145/3442381.3450078},
+	booktitle = {Proceedings of the Web Conference 2021},
+	pages = {1785–1797},
+	numpages = {13},
+	keywords = {Feature Crossing, CTR Prediction, Neural Networks, Deep Learning},
+	location = {Ljubljana, Slovenia},
+	series = {WWW '21}
+}
+
+@inproceedings{song_autoint_2019,
+	author = {Song, Weiping and Shi, Chence and Xiao, Zhiping and Duan, Zhijian and Xu, Yewen and Zhang, Ming and Tang, Jian},
+	title = {AutoInt: Automatic Feature Interaction Learning via Self-Attentive Neural Networks},
+	year = {2019},
+	isbn = {9781450369763},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/3357384.3357925},
+	doi = {10.1145/3357384.3357925},
+	booktitle = {Proceedings of the 28th ACM International Conference on Information and Knowledge Management},
+	pages = {1161–1170},
+	numpages = {10},
+	keywords = {ctr prediction, high-order feature interactions, explainable recommendation, self attention},
+	location = {Beijing, China},
+	series = {CIKM '19}
+}
+
+@inproceedings{he_gbdtlr_2014,
+	author = {He, Xinran and Pan, Junfeng and Jin, Ou and Xu, Tianbing and Liu, Bo and Xu, Tao and Shi, Yanxin and Atallah, Antoine and Herbrich, Ralf and Bowers, Stuart and Candela, Joaquin Qui\~{n}onero},
+	title = {Practical Lessons from Predicting Clicks on Ads at Facebook},
+	year = {2014},
+	isbn = {9781450329996},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/2648584.2648589},
+	doi = {10.1145/2648584.2648589},
+	booktitle = {Proceedings of the Eighth International Workshop on Data Mining for Online Advertising},
+	pages = {1–9},
+	numpages = {9},
+	location = {New York, NY, USA},
+	series = {ADKDD'14}
+}
+
+@inproceedings{juan_ffm_2016,
+	author = {Juan, Yuchin and Zhuang, Yong and Chin, Wei-Sheng and Lin, Chih-Jen},
+	title = {Field-Aware Factorization Machines for CTR Prediction},
+	year = {2016},
+	isbn = {9781450340359},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/2959100.2959134},
+	doi = {10.1145/2959100.2959134},
+	pages = {43–50},
+	numpages = {8},
+	keywords = {machine learning, click-through rate prediction, computational advertising, factorization machines},
+	location = {Boston, Massachusetts, USA},
+	series = {RecSys '16}
+}
